--- a/teachers/index.adoc
+++ b/teachers/index.adoc
@@ -1,20 +1,27 @@
-Učitelé
--------
+= Učitelé
 
-* Tento semestr vás učí:
-** první cvičení:
-*** xref:prusaja3#[Jakub Průša]
-*** xref:wijasjan#[Janusz Wijas]
-** druhé cvičení:
-*** xref:hroncmir#[Miro Hrončok] (garant předmětu)
-*** xref:hanusji8#[Jiří Hanuš]
-** třetí cvičení:
-*** xref:sykorto6#[Tomáš Sýkora]
-*** xref:hlavam30#[Marián Hlaváč]
-* Telefon do labu: +420 224 358 714
-* Místnost labu: TH:A-1153
-* E-mail: 3dprint@fit.cvut.cz (začněte předmět [BI-3DT])
-* Twitter: @https://twitter.com/3DprintFIT[3DprintFIT],
-https://twitter.com/search?vertical=default&q=%23fit3dt[#fit3dt]
-* Facebook: https://www.facebook.com/groups/bi3dt/[Nechceme vypadnout z
-BI-3DT]
+První cvičení od 9:15::
+  * xref:hroncmir#[Miro Hrončok] (garant předmětu)
+  * xref:hlavam30#[Marián Hlaváč]
+
+Druhé cvičení od 11:45::
+  * xref:hroncmir#[Miro Hrončok] (garant předmětu)
+  * xref:hanusji8#[Jiří „Hany“ Hanuš]
+
+Na předmětu se dále podílejí a vypomáhají::
+  * xref:sykorto6#[Tomáš „Syky“ Sýkora]
+  * Marek Reimer
+
+Kontaktní informace::
+  * Telefon do labu: +420 224 358 714
+  * Místnost labu: TH:A-1153
+  * E-mail: 3dprint@fit.cvut.cz (začněte předmět [BI-3DT])
+  * Twitter: https://twitter.com/3DprintFIT[@3DprintFIT],
+    https://twitter.com/search?vertical=default&q=%23fit3dt[#fit3dt]
+  * Facebook: https://www.facebook.com/groups/bi3dt/[Nechceme vypadnout z BI-3DT]
+
+V minulosti se na předmětu podíleli také::
+  * Marek Žehra
+  * Jakub Průša
+  * Ivo Háleček
+  * Janusz Wijas
