--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -16,7 +16,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |3. |16.10.2018 |xref:openscad#[OpenSCAD: Pokročilé]
 |https://github.com/3DprintFIT/B181A-OpenSCAD2-Assignment[3]
 
-|4. |23.10.2018 |xref:mesh#[Mesh] |3
+|4. |23.10.2018 |xref:mesh#[Mesh]
+|https://github.com/3DprintFIT/B181A-Mesh-Assignment[3]
 
 |5. |30.10.2018 |🚧 xref:admesh#[ADMesh] - Programová manipulace s meshí |3
 
