--- a/tutorials/admesh.adoc
+++ b/tutorials/admesh.adoc
@@ -1,13 +1,12 @@
-Programová manipulace s STL soubory
------------------------------------
+= Programová manipulace s STL soubory
+:toc:
 
 Kromě ručního zpracování meshe v programech, jako je Netfabb Basic, je
 možné mesh zpracovávat i programově – tedy vytvářet programy, které s
 meshí něco více či méně zajímavého provádějí. Protože jsme na Fakultě
 informačních technologií, byla by škoda tento přístup neprozkoumat.
 
-Možnosti zpracování meshe ve formátu STL
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+== Možnosti zpracování meshe ve formátu STL
 
 Formát STL je velmi jednoduchý. Jeho popis najdete ve
 xref:./mesh#[cvičení, které se věnuje meshi a chybám v ní]. Načítat a
@@ -29,8 +28,7 @@ My budeme používat knihovnu https://github.com/admesh/admesh[ADMesh],
 která je napsaná v jazyce C, dá se jednoduše použít v jazyce C++,
 existují bindingy pro jazyky Python a Ruby.
 
-ADMesh
-~~~~~~
+== ADMesh
 
 https://github.com/admesh/admesh[ADMesh] je open-source program, který
 umožňuje manipulovat s STL meshí z příkazové řádky. Kromě rozhraní pro
@@ -38,8 +36,7 @@ příkazovou řádku je k dispozici také knihovní API, které ale původně
 nevzniklo s úmyslem znovupoužitelnosti, takže je mnohdy jeho použití
 neintuitivní.
 
-Příklad: Převod z ASCII do binárního STL a obráceně
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+=== Příklad: Převod z ASCII do binárního STL a obráceně
 
 Zde je na ukázku krátký program, který načte STL soubor `model.stl`
 (binární nebo ASCII) a zapíše jej jako ASCII nebo binární STL do
@@ -83,30 +80,22 @@ jinak můžete dostat SEGFAULT
 Program se kompiluje pomocí:
 
 [source,console]
-----
 $ gcc source.c -ladmesh -o myapp
-----
 
 Případně, pokud nemáte ADMesh nainstalovaný ve standardních cestách:
 
 [source,console]
-----
 $ gcc -L/cesta/k/adresáři/knihovnou -I/cesta/k/adresáři/s/hlavičkovým/souborem source.c -ladmesh -o myapp
-----
 
 Výsledný program spustíte příkazem:
 
 [source,console]
-----
 $ ./myapp
-----
 
 Na některých systémech musíte použít:
 
 [source,console]
-----
 $ LD_LIBRARY_PATH=/usr/local/lib ./myapp
-----
 
 Pro ty méně šťastné z vás, používající Windows, bohužel oficiální
 instrukce neznáme, máme ale nějaké
