--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -19,7 +19,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |4. |23.10.2018 |xref:mesh#[Mesh]
 |https://github.com/3DprintFIT/B181A-Mesh-Assignment[3]
 
-|5. |30.10.2018 |xref:admesh#[ADMesh] - Programová manipulace s meshí |3
+|5. |30.10.2018 |xref:admesh#[ADMesh] - Programová manipulace s meshí
+|https://github.com/3DprintFIT/B181A-ADMesh-Assignment[3]
 
 |6. |6.11.2018 |🚧 xref:slicing#[Slicing], xref:gcode#[GCode],
 xref:slic3r#[Slic3r], xref:kisslicer#[KISSlicer] |3
